<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/general">

        <ListPreference
            android:defaultValue="Linear"
            android:entries="@array/note_style_array"
            android:entryValues="@array/note_style_values"
            android:key="note_style_key"
            android:icon="@drawable/ic_style"
            app:useSimpleSummaryProvider="true"
            android:title="@string/chose_note_style" />
        <ListPreference
            android:defaultValue="hh:mm - dd/MM/yyyy"
            android:entries="@array/time_format"
            android:entryValues="@array/time_format_values"
            android:key="time_format_key"
            app:useSimpleSummaryProvider="true"
            android:title="@string/chose_time_format"
            android:icon="@drawable/ic_time_format"
            />
        <Preference
            android:title="@string/remove_ads"
            android:summary="@string/remove_ads_summery"
            android:icon="@drawable/ic_remove_ads"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/theme_settings">

        <ListPreference
            android:defaultValue="Blue"
            android:entries="@array/chose_theme_array"
            android:entryValues="@array/chose_theme_value"
            android:key="theme_key"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_theme_style"
            android:title="@string/chose_theme" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Text note settings">

        <ListPreference
            android:defaultValue="16"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:key="title_size_key"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_text"
            android:title="@string/title_test_size" />
        <ListPreference
            android:defaultValue="14"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:key="content_size_key"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_text"
            android:title="@string/content_test_size" />
    </PreferenceCategory>
</PreferenceScreen>